--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,7 +34,7 @@
         <p>Manage your tennis matches, record results, and track rankings</p>
         <div class="welcome-image"></div>
         <div class="form-container center">
-            <a class="homepage-action-button" href="/start-match">
+            <a class="homepage-action-button" href="/api/new-match">
                 <button class="btn start-match">
                     Start a new match
                 </button>
