--- a/src/main/webapp/new-match.html
+++ b/src/main/webapp/new-match.html
@@ -36,9 +36,9 @@
                 <form method="post" action="#">
                     <p style="color: red;">Sample error message</p>
                     <label class="label-player" for="playerOne">Player one</label>
-                    <input class="input-player" placeholder="Name" type="text" required title="Enter a name">
+                    <input class="input-player" name="playerOne" placeholder="Name" type="text" required title="Enter a name">
                     <label class="label-player" for="playerTwo">Player two</label>
-                    <input class="input-player" placeholder="Name" type="text" required title="Enter a name">
+                    <input class="input-player" name="playerTwo" placeholder="Name" type="text" required title="Enter a name">
                     <input class="form-button" type="submit" value="Start">
                 </form>
             </div>
